[package]
name = "rust-front-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
web-sys = {version = "0.3.60", futures = ["HtmlInputElement"]}
gloo = "0.8.0"
serde = "1.0.145"
serde_json = "1.0.86"
wasm-bindgen = "0.2.83"
stylist = { version = "0.10.1", features = ["yew_integration"] }
yew-router = "0.16"